# CRGP

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  bitbucket-pipelines.yml
crgp-lib/: Cargo.toml
crgp-lib/benches/: iteration-with-containment-check.rs  iteration-with-set-containment-check-manual.rs  iteration-with-set-containment-check.rs  iteration.rs  sg-iteration-add-to-set-and-check.rs  sg-iteration-add-to-set.rs  sg-iteration-fnv-add-to-set-and-check.rs  sg-iteration-with-set-containment-check-manual.rs  sg-iteration-with-set-containment-check.rs  sg-iteration.rs  users.csv  vector-iteration-with-set-containment-check.rs  vector-iteration.rs  vector-iteration_with_set_containment_check.rs
crgp-lib/examples/: default_configuration.rs
crgp-lib/src/: algorithm.rs  aws_s3.rs  configuration.rs  error.rs  lib.rs  statistics.rs
crgp-lib/src/algorithm/: mod.rs
crgp-lib/src/configuration/: algorithm.rs  input.rs  main.rs  mod.rs  output.rs  s3.rs
crgp-lib/src/execution/: mod.rs  run.rs  simplify_result.rs
crgp-lib/src/execution/algorithms/: leaf.rs  mod.rs
crgp-lib/src/reconstruction/: mod.rs  run.rs  simplify_result.rs
crgp-lib/src/reconstruction/algorithms/: gale.rs  leaf.rs  mod.rs  throughput.rs
crgp-lib/src/social_graph/: graph.rs  influence_edge.rs  mod.rs
crgp-lib/src/social_graph/source/: mod.rs  tar.rs
crgp-lib/src/timely_extensions/: mod.rs  sync.rs
crgp-lib/src/timely_extensions/operators/: find_possible_influences.rs  mod.rs  prefix_filter.rs  reconstruct.rs  write.rs
crgp-lib/src/twitter/: get.rs  mod.rs  retweet.rs  tweet.rs  user.rs
crgp-lib/tests/: algorithm_execution.rs  integration.rs
data/: cascade3500.json  cascade7226.json  cascade_test.json  friends_test.txt  retweeting_users.txt  retweets.json
data/social_graph/000/: 00.tar
data/social_graph/001/: 00.tar
data/tests/friends-tar/001/: 00.tar  01.tar  invalid.tar
data/tests/friends/000/000/000/: friends4.csv
data/tests/friends/001/invalid/: .gitkeep
scripts/: compare_all_pairwise.sh  compare_outputs.sh  get_rts.py  get_users_of_cascade.py  kcov.sh  memusg  run.sh  run_multiple.sh  unique-times.py
src/: algorithm.rs  dataset.rs  error.rs  exit.rs  hash.rs  lib.rs  main.rs  quit.rs  statistics.rs  validation.rs
src/social_graph/: directed_edge.rs  edge.rs  influence_edge.rs  load.rs  mod.rs
src/social_graph/load/: from_file.rs  mod.rs
src/social_graph/source/: csv_files.rs  mod.rs  text_file.rs
src/timely_extensions/: mod.rs  sync.rs
src/timely_extensions/operators/: find_possible_influences.rs  mod.rs  reconstruct.rs  write.rs
src/timely_operators/: find_possible_influences.rs  max.rs  mod.rs
src/twitter/: load.rs  mod.rs  tweet.rs  user.rs
tests/: integration.rs
