[package]
name = "crgp"
version = "0.3.0"
authors = ["Bastian Meyer <bastian@bastianmeyer.eu>"]
description = "A graph-parallel approach to reconstructing the influences within Retweet cascades."
repository = "https://bitbucket.org/BMeu/crgp"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["twitter", "cascade", "reconstruct", "graph", "influence"]
categories = ["algorithms", "science", "command-line-interface"]

[workspace]
members = [
    ".",
    "crgp-lib"
]

[dependencies]
clap = "2.21"
crgp_lib = { path = "crgp-lib" }
flexi_logger = "0.5"
time = "0.1"
toml = "0.4"
