[package]
name = "crgp_lib"
version = "1.0.0"
authors = ["Bastian Meyer <bastian@bastianmeyer.eu>"]
description = "A graph-parallel library for reconstructing the influences within Retweet cascades."
repository = "https://github.com/BMeu/CRGP"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["twitter", "cascade", "reconstruct", "graph", "influence"]
categories = ["algorithms", "science"]

[dependencies]
abomonation = "0.4"
fine_grained = "0.1"
lazy_static = "1.0"
log = "0.4"
regex = "0.2"
rust-s3 = { git = "https://github.com/BMeu/rust-s3", branch = "large-sizes-and-missing-fields" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tar = "0.4"
timely = "0.2"
timely_communication = "0.1"

[dev-dependencies]
find_folder = "0.3"
fnv = "1.0"
quickcheck = "0.6"
rand = "0.8"

[target.'cfg(unix)'.dev-dependencies]
gag = "0.1"
